Doc/force-app/main/default/objects/Idea/fields/Idea_Created__c.field-meta.xml
<CustomField>
    <fullName>Idea_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Idea Created</label>
    <type>Checkbox</type>
</CustomField>