Doc/force-app/main/default/objects/Idea/fields/Idea_Link__c.field-meta.xml
<CustomField>
    <fullName>Idea_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://intapp.my.salesforce.com/&quot;+Id, Title)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idea Link</label>
    <type>Text</type>
</CustomField>