Doc/force-app/main/default/objects/Idea/fields/Jira_Case_No__c.field-meta.xml
<CustomField>
    <fullName>Jira_Case_No__c</fullName>
    <label>Jira Case No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>