Doc/force-app/main/default/objects/Idea/fields/SFDC_Test__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Notification to Idea Author</label>
    <type>Checkbox</type>
</CustomField>