Doc/force-app/main/default/objects/Idea/recordTypes/Record_type_for_community_09a50000000H0WLAA0_entity_Idea.recordType-meta.xml
<RecordType>
    <fullName>Record_type_for_community_09a50000000H0WLAA0_entity_Idea</fullName>
    <active>true</active>
    <description>Record type used to associate Idea with a specific zone</description>
    <label>LegalKey: Idea Record Type</label>
</RecordType>