Doc/force-app/main/default/objects/Idea/validationRules/Prevent_competitor_products.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_competitor_products</fullName>
    <active>true</active>
    <description>This rule prevents competitior product names from being entered into comments.</description>
    <errorConditionFormula>OR(CONTAINS(UPPER(Title),&apos;FRAYMAN&apos;),CONTAINS(UPPER(Body),&apos;FRAYMAN&apos;),CONTAINS(UPPER(Title),&apos;TFG&apos;),CONTAINS(UPPER(Body),&apos;TFG&apos;),CONTAINS(UPPER(Title),&apos;COMPLIGUARD&apos;),CONTAINS(UPPER(Body),&apos;COMPLIGUARD&apos;),CONTAINS(UPPER(Title),&apos;TIMEKM&apos;),CONTAINS(UPPER(Body),&apos;TIMEKM&apos;),CONTAINS(UPPER(Title),&apos;TIME KM&apos;),CONTAINS(UPPER(Body),&apos;TIME KM&apos;),CONTAINS(UPPER(Title),&apos;TIKIT&apos;),CONTAINS(UPPER(Body),&apos;TIKIT&apos;),CONTAINS(UPPER(Title),&apos;LEGAL55&apos;),CONTAINS(UPPER(Body),&apos;LEGAL55&apos;),CONTAINS(UPPER(Title),&apos;LEGAL 55&apos;),CONTAINS(UPPER(Body),&apos;LEGAL 55&apos;),CONTAINS(UPPER(Title),&apos;ELEMENT55&apos;),CONTAINS(UPPER(Body),&apos;ELEMENT55&apos;),CONTAINS(UPPER(Title),&apos;ELEMENT 55&apos;),CONTAINS(UPPER(Body),&apos;ELEMENT 55&apos;),CONTAINS(UPPER(Title),&apos;CHROMETA&apos;),CONTAINS(UPPER(Body),&apos;CHROMETA&apos;),CONTAINS(UPPER(Title),&apos;IMPRIVATE&apos;),CONTAINS(UPPER(Body),&apos;IMPRIVATE&apos;),CONTAINS(UPPER(Title),&apos;DOCAUTO&apos;),CONTAINS(UPPER(Body),&apos;DOCAUTO&apos;),CONTAINS(UPPER(Title),&apos;SECURITYGUARD&apos;),CONTAINS(UPPER(Body),&apos;SECURITYGUARD&apos;),CONTAINS(UPPER(Title),&apos;WINCWALL&apos;),CONTAINS(UPPER(Body),&apos;WINCWALL&apos;),CONTAINS(UPPER(Title),&apos;MASTERETHICS&apos;),CONTAINS(UPPER(Body),&apos;MASTERETHICS&apos;),CONTAINS(UPPER(Title),&apos;WERTHEIM GLOBAL SOLUTIONS&apos;),CONTAINS(UPPER(Body),&apos;WERTHEIM GLOBAL SOLUTIONS&apos;),CONTAINS(UPPER(Title),&apos;RBRO SOLUTIONS&apos;),CONTAINS(UPPER(Body),&apos;RBRO SOLUTIONS&apos;),CONTAINS(UPPER(Title),&apos;YOUNTS CONSULTING&apos;),CONTAINS(UPPER(Body),&apos;YOUNTS CONSULTING&apos;),CONTAINS(UPPER(Title),&apos;ADEPTIA INTEGRATION SUITE&apos;),CONTAINS(UPPER(Body),&apos;ADEPTIA INTEGRATION SUITE&apos;),CONTAINS(UPPER(Title),&apos;BIZTALK&apos;),CONTAINS(UPPER(Body),&apos;BIZTALK&apos;),CONTAINS(UPPER(Title),&apos;JITTERBIT&apos;),CONTAINS(UPPER(Body),&apos;JITTERBIT&apos;),CONTAINS(UPPER(Title),&apos;ADROITLOGIC&apos;),CONTAINS(UPPER(Body),&apos;ADROITLOGIC&apos;),CONTAINS(UPPER(Title),&apos;APACHE CAMEL&apos;),CONTAINS(UPPER(Body),&apos;APACHE CAMEL&apos;),CONTAINS(UPPER(Title),&apos;APACHE SYNAPSE&apos;),CONTAINS(UPPER(Body),&apos;APACHE SYNAPSE&apos;))</errorConditionFormula>
    <errorMessage>Your idea contains a word or words that is not accepted. If you think you see this message mistakenly, please, contact support@intapp.com with your comment so we can improve our filters. (1)</errorMessage>
</ValidationRule>