Doc/force-app/main/default/objects/Idea/validationRules/Prevent_competitor_products2.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_competitor_products2</fullName>
    <active>true</active>
    <description>This rule prevents competitior product names from being entered into ideas.</description>
    <errorConditionFormula>OR(CONTAINS(UPPER(Title),&apos;ARTIX ESB&apos;),CONTAINS(UPPER(Body),&apos;ARTIX ESB&apos;),CONTAINS(UPPER(Title),&apos;AUTOMATION ANYWHERE&apos;),CONTAINS(UPPER(Body),&apos;AUTOMATION ANYWHERE&apos;),CONTAINS(UPPER(Title),&apos;FUSE ESB&apos;),CONTAINS(UPPER(Body),&apos;FUSE ESB&apos;),CONTAINS(UPPER(Title),&apos;INFORMATICA POWER CENTER&apos;),CONTAINS(UPPER(Body),&apos;INFORMATICA POWER CENTER&apos;),CONTAINS(UPPER(Title),&apos;JBOSS ENTERPRISE SOA PLATFORM&apos;),CONTAINS(UPPER(Body),&apos;JBOSS ENTERPRISE SOA PLATFORM&apos;),CONTAINS(UPPER(Title),&apos;MULE ESB&apos;),CONTAINS(UPPER(Body),&apos;MULE ESB&apos;),CONTAINS(UPPER(Title),&apos;OPENADAPTOR&apos;),CONTAINS(UPPER(Body),&apos;OPENADAPTOR&apos;),CONTAINS(UPPER(Title),&apos;OPENESB&apos;),CONTAINS(UPPER(Body),&apos;OPENESB&apos;),CONTAINS(UPPER(Title),&apos;OPENLINK VIRTUOSO&apos;),CONTAINS(UPPER(Body),&apos;OPENLINK VIRTUOSO&apos;),CONTAINS(UPPER(Title),&apos;ORACLE BPEL PROCESS MANAGER&apos;),CONTAINS(UPPER(Body),&apos;ORACLE BPEL PROCESS MANAGER&apos;),CONTAINS(UPPER(Title),&apos;ORACLE ENTERPRISE SERVICE BUS&apos;),CONTAINS(UPPER(Body),&apos;ORACLE ENTERPRISE SERVICE BUS&apos;),CONTAINS(UPPER(Title),&apos;PETALS ESB&apos;),CONTAINS(UPPER(Body),&apos;PETALS ESB&apos;),CONTAINS(UPPER(Title),&apos;SONIC ESB&apos;),CONTAINS(UPPER(Body),&apos;SONIC ESB&apos;),CONTAINS(UPPER(Title),&apos;SAP NETWEAVER PROCESS INTEGRATION&apos;),CONTAINS(UPPER(Body),&apos;SAP NETWEAVER PROCESS INTEGRATION&apos;),CONTAINS(UPPER(Title),&apos;SERVICEMIX&apos;),CONTAINS(UPPER(Body),&apos;SERVICEMIX&apos;),CONTAINS(UPPER(Title),&apos;SPAGIC&apos;),CONTAINS(UPPER(Body),&apos;SPAGIC&apos;),CONTAINS(UPPER(Title),&apos;SUN JAVA COMPOSITE APPLICATION PLATFORM SUITE&apos;),CONTAINS(UPPER(Body),&apos;SUN JAVA COMPOSITE APPLICATION PLATFORM SUITE&apos;),CONTAINS(UPPER(Title),&apos;TALEND ESB&apos;),CONTAINS(UPPER(Body),&apos;TALEND ESB&apos;),CONTAINS(UPPER(Title),&apos;TRACKERSUITE.NET&apos;),CONTAINS(UPPER(Body),&apos;TRACKERSUITE.NET&apos;),CONTAINS(UPPER(Title),&apos;UNIFY NXJ&apos;),CONTAINS(UPPER(Body),&apos;UNIFY NXJ&apos;),CONTAINS(UPPER(Title),&apos;WEBSPHERE ENTERPRISE SERVICE BUS&apos;),CONTAINS(UPPER(Body),&apos;WEBSPHERE ENTERPRISE SERVICE BUS&apos;),CONTAINS(UPPER(Title),&apos;WEBSPHERE MESSAGE BROKER&apos;),CONTAINS(UPPER(Body),&apos;WEBSPHERE MESSAGE BROKER&apos;),CONTAINS(UPPER(Title),&apos;WEBSPHERE PROCESS SERVER&apos;),CONTAINS(UPPER(Body),&apos;WEBSPHERE PROCESS SERVER&apos;),CONTAINS(UPPER(Title),&apos;WS02 ENTERPRISE SERVICE BUS&apos;),CONTAINS(UPPER(Body),&apos;WS02 ENTERPRISE SERVICE BUS&apos;))</errorConditionFormula>
    <errorMessage>Your idea contains a word or words that is not accepted. If you think you see this message mistakenly, please, contact support@intapp.com with your comment so we can improve our filters. (2)</errorMessage>
</ValidationRule>