Doc/force-app/main/default/objects/Idea/validationRules/Prevent_swear_words.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_swear_words</fullName>
    <active>true</active>
    <description>This rule prevents swear words from being entered into ideas.</description>
    <errorConditionFormula>OR(CONTAINS(UPPER(Title),&apos;DAMN&apos;),CONTAINS(UPPER(Body),&apos;DAMN&apos;),CONTAINS(UPPER(Title),&apos;SHIT&apos;),CONTAINS(UPPER(Body),&apos;SHIT&apos;),CONTAINS(UPPER(Title),&apos;PISS&apos;),CONTAINS(UPPER(Body),&apos;PISS&apos;),CONTAINS(UPPER(Title),&apos;PISSED&apos;),CONTAINS(UPPER(Body),&apos;PISSED&apos;),CONTAINS(UPPER(Title),&apos;BASTARD&apos;),CONTAINS(UPPER(Body),&apos;BASTARD&apos;),CONTAINS(UPPER(Title),&apos;FUCK&apos;),CONTAINS(UPPER(Body),&apos;FUCK&apos;),CONTAINS(UPPER(Title),&apos;ASSHOLE&apos;),CONTAINS(UPPER(Body),&apos;ASSHOLE&apos;),CONTAINS(UPPER(Title),&apos;FUCKING&apos;),CONTAINS(UPPER(Body),&apos;FUCKING&apos;),CONTAINS(UPPER(Title),&apos;COCK&apos;),CONTAINS(UPPER(Body),&apos;COCK&apos;),CONTAINS(UPPER(Title),&apos;PUSSY&apos;),CONTAINS(UPPER(Body),&apos;PUSSY&apos;),CONTAINS(UPPER(Title),&apos;FUCKED&apos;),CONTAINS(UPPER(Body),&apos;FUCKED&apos;),CONTAINS(UPPER(Title),&apos;FUCKED-UP&apos;),CONTAINS(UPPER(Body),&apos;FUCKED-UP&apos;),CONTAINS(UPPER(Title),&apos;MOTHERFUCKER&apos;),CONTAINS(UPPER(Body),&apos;MOTHERFUCKER&apos;),CONTAINS(UPPER(Title),&apos;SLUT&apos;),CONTAINS(UPPER(Body),&apos;SLUT&apos;),CONTAINS(UPPER(Title),&apos;BITCH&apos;),CONTAINS(UPPER(Body),&apos;BITCH&apos;),CONTAINS(UPPER(Title),&apos;PUSSIE&apos;),CONTAINS(UPPER(Body),&apos;PUSSIE&apos;),CONTAINS(UPPER(Title),&apos;SLUT&apos;),CONTAINS(UPPER(Body),&apos;SLUT&apos;),CONTAINS(UPPER(Title),&apos;SLUTS&apos;),CONTAINS(UPPER(Body),&apos;SLUTS&apos;),CONTAINS(UPPER(Title),&apos;WHORE&apos;),CONTAINS(UPPER(Body),&apos;WHORE&apos;),CONTAINS(UPPER(Title),&apos;DICK&apos;),CONTAINS(UPPER(Body),&apos;DICK&apos;),CONTAINS(UPPER(Title),&apos;VAGINA&apos;),CONTAINS(UPPER(Body),&apos;VAGINA&apos;),CONTAINS(UPPER(Title),&apos;COCK&apos;),CONTAINS(UPPER(Body),&apos;COCK&apos;),CONTAINS(UPPER(Title),&apos;COCKSUCKER&apos;),CONTAINS(UPPER(Body),&apos;COCKSUCKER&apos;),CONTAINS(UPPER(Title),&apos;SONOFABITCH&apos;),CONTAINS(UPPER(Body),&apos;SONOFABITCH&apos;),CONTAINS(UPPER(Title),&apos;FUCKER&apos;),CONTAINS(UPPER(Body),&apos;FUCKER&apos;),CONTAINS(UPPER(Title),&apos;BITCHES&apos;),CONTAINS(UPPER(Body),&apos;BITCHES&apos;))</errorConditionFormula>
    <errorMessage>Your idea contains a word or words that is not accepted. If you think you see this message mistakenly, please, contact support@intapp.com with your comment so we can improve our filters. (3)</errorMessage>
</ValidationRule>