Doc/force-app/main/default/objects/Idea/validationRules/Prevent_swear_words2.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_swear_words2</fullName>
    <active>true</active>
    <description>This rule prevents swear words from being entered into ideas.</description>
    <errorConditionFormula>OR(CONTAINS(UPPER(Title),&apos;BEANER&apos;),CONTAINS(UPPER(Body),&apos;BEANER&apos;),CONTAINS(UPPER(Title),&apos;BULLSHIT&apos;),CONTAINS(UPPER(Body),&apos;BULLSHIT&apos;),CONTAINS(UPPER(Title),&apos;BLOWJOB&apos;),CONTAINS(UPPER(Body),&apos;BLOWJOB&apos;),CONTAINS(UPPER(Title),&apos;CLIT&apos;),CONTAINS(UPPER(Body),&apos;CLIT&apos;),CONTAINS(UPPER(Title),&apos;CUNT&apos;),CONTAINS(UPPER(Body),&apos;CUNT&apos;),CONTAINS(UPPER(Title),&apos;DAGO&apos;),CONTAINS(UPPER(Body),&apos;DAGO&apos;),CONTAINS(UPPER(Title),&apos;DICKHEAD&apos;),CONTAINS(UPPER(Body),&apos;DICKHEAD&apos;),CONTAINS(UPPER(Title),&apos;DOUCHEBAG&apos;),CONTAINS(UPPER(Body),&apos;DOUCHEBAG&apos;),CONTAINS(UPPER(Title),&apos;DOUCHE&apos;),CONTAINS(UPPER(Body),&apos;DOUCHE&apos;),CONTAINS(UPPER(Title),&apos;DUMBASS&apos;),CONTAINS(UPPER(Body),&apos;DUMBASS&apos;),CONTAINS(UPPER(Title),&apos;DUMBSHIT&apos;),CONTAINS(UPPER(Body),&apos;DUMBSHIT&apos;),CONTAINS(UPPER(Title),&apos;DUMBFUCK&apos;),CONTAINS(UPPER(Body),&apos;DUMBFUCK&apos;),CONTAINS(UPPER(Title),&apos;FAGGOT&apos;),CONTAINS(UPPER(Body),&apos;FAGGOT&apos;),CONTAINS(UPPER(Title),&apos;FAGGIT&apos;),CONTAINS(UPPER(Body),&apos;FAGGIT&apos;),CONTAINS(UPPER(Title),&apos;FAG&apos;),CONTAINS(UPPER(Body),&apos;FAG&apos;),CONTAINS(UPPER(Title),&apos;FUCKHEAD&apos;),CONTAINS(UPPER(Body),&apos;FUCKHEAD&apos;),CONTAINS(UPPER(Title),&apos;FUCKFACE&apos;),CONTAINS(UPPER(Body),&apos;FUCKFACE&apos;),CONTAINS(UPPER(Title),&apos;GODDAMNIT&apos;),CONTAINS(UPPER(Body),&apos;GODDAMNIT&apos;),CONTAINS(UPPER(Title),&apos;GOOK&apos;),CONTAINS(UPPER(Body),&apos;GOOK&apos;),CONTAINS(UPPER(Title),&apos;JACKOFF&apos;),CONTAINS(UPPER(Body),&apos;JACKOFF&apos;),CONTAINS(UPPER(Title),&apos;KYKE&apos;),CONTAINS(UPPER(Body),&apos;KYKE&apos;),CONTAINS(UPPER(Title),&apos;MOTHERFUCKING&apos;),CONTAINS(UPPER(Body),&apos;MOTHERFUCKING&apos;),CONTAINS(UPPER(Title),&apos;NIGGER&apos;),CONTAINS(UPPER(Body),&apos;NIGGER&apos;),CONTAINS(UPPER(Title),&apos;SPIC&apos;),CONTAINS(UPPER(Body),&apos;SPIC&apos;),CONTAINS(UPPER(Title),&apos;TWAT&apos;),CONTAINS(UPPER(Body),&apos;TWAT&apos;),CONTAINS(UPPER(Title),&apos;WETBACK&apos;),CONTAINS(UPPER(Body),&apos;WETBACK&apos;),CONTAINS(UPPER(Title),&apos;WOP&apos;),CONTAINS(UPPER(Body),&apos;WOP&apos;))</errorConditionFormula>
    <errorMessage>Your idea contains a word or words that is not accepted. If you think you see this message mistakenly, please, contact support@intapp.com with your comment so we can improve our filters. (4)</errorMessage>
</ValidationRule>