Doc/force-app/main/default/objects/Idea/listViews/Created_by_Eric_Mosca.listView-meta.xml
<ListView>
    <fullName>Created_by_Eric_Mosca</fullName>
    <columns>IDEA.CREATED_DATE</columns>
    <columns>IDEA.TITLE</columns>
    <columns>IDEA.CREATED_BY_NICKNAME</columns>
    <columns>VOTE_STATS.WEIGHTED_SUM</columns>
    <columns>IDEA.NUM_COMMENTS</columns>
    <columns>IDEA.STATUS</columns>
    <columns>IDEA.CATEGORIES</columns>
    <columns>COMMUNITY.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IDEA.CREATED_BY_NICKNAME</field>
        <operation>equals</operation>
        <value>Eric Mosca</value>
    </filters>
    <label>Created by Eric Mosca</label>
    <language>en_US</language>
</ListView>