Doc/force-app/main/default/objects/Idea/listViews/Intapp_Time_Ideas.listView-meta.xml
<ListView>
    <fullName>Intapp_Time_Ideas</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>IDEA.CREATED_DATE</columns>
    <columns>IDEA.TITLE</columns>
    <columns>VOTE_STATS.WEIGHTED_SUM</columns>
    <columns>IDEA.STATUS</columns>
    <columns>IDEA.NUM_COMMENTS</columns>
    <columns>Account_Name__c</columns>
    <columns>IDEA.CREATED_BY_NICKNAME</columns>
    <columns>Contact__c</columns>
    <columns>Jira_Case_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IDEA.CATEGORIES</field>
        <operation>equals</operation>
        <value>Intapp Time</value>
    </filters>
    <filters>
        <field>COMMUNITY.NAME</field>
        <operation>equals</operation>
        <value>Intapp Time</value>
    </filters>
    <filters>
        <field>Account_Name__c</field>
        <operation>contains</operation>
        <value>mckenzie</value>
    </filters>
    <label>Intapp Time Ideas - Client</label>
    <language>en_US</language>
    <sharedTo>
        <group>CSMs</group>
    </sharedTo>
</ListView>