Doc/force-app/main/default/objects/Idea/listViews/Time_Ideas.listView-meta.xml
<ListView>
    <fullName>Time_Ideas</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>IDEA.CREATED_DATE</columns>
    <columns>IDEA.TITLE</columns>
    <columns>IDEA.CREATED_BY_NICKNAME</columns>
    <columns>VOTE_STATS.WEIGHTED_SUM</columns>
    <columns>IDEA.NUM_COMMENTS</columns>
    <columns>IDEA.STATUS</columns>
    <columns>IDEA.CATEGORIES</columns>
    <columns>COMMUNITY.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IDEA.CATEGORIES</field>
        <operation>equals</operation>
        <value>Intapp Time</value>
    </filters>
    <filters>
        <field>IDEA.CATEGORIES</field>
        <operation>equals</operation>
        <value>Intapp Time Cloud</value>
    </filters>
    <filters>
        <field>IDEA.STATUS</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>Time Ideas</label>
    <language>en_US</language>
</ListView>